[gd_scene load_steps=87 format=2]

[ext_resource path="res://Others/Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Downloads/GFX/Kadith's free icons/PNGs/Mouse/Individual/LeftClick1.png" type="Texture" id=2]
[ext_resource path="res://Downloads/GFX/Kadith's free icons/PNGs/RetroKeyboardWhite/Individuals/ESCRetroWhite.png" type="Texture" id=3]
[ext_resource path="res://Downloads/GFX/Kadith's free icons/PNGs/RetroKeyboardWhite/Individuals/ERetroWhite.png" type="Texture" id=4]
[ext_resource path="res://Downloads/GFX/Kadith's free icons/PNGs/Mouse/Individual/RightClick1.png" type="Texture" id=5]
[ext_resource path="res://Downloads/GFX/Kadith's free icons/PNGs/Mouse/Individual/ScrollDown.png" type="Texture" id=6]
[ext_resource path="res://Downloads/GFX/Kadith's free icons/PNGs/RetroKeyboardWhite/Individuals/DRetroWhite.png" type="Texture" id=7]
[ext_resource path="res://Downloads/GFX/Kadith's free icons/PNGs/RetroKeyboardWhite/Individuals/SpaceRetroWhite.png" type="Texture" id=8]
[ext_resource path="res://Downloads/GFX/Kadith's free icons/PNGs/RetroKeyboardWhite/Individuals/TabRetroWhite.png" type="Texture" id=9]
[ext_resource path="res://Downloads/GFX/Kadith's free icons/PNGs/RetroKeyboardWhite/Individuals/WRetroWhite.png" type="Texture" id=10]
[ext_resource path="res://Downloads/GFX/Kadith's free icons/PNGs/Mouse/Individual/ScrollUp.png" type="Texture" id=11]
[ext_resource path="res://Downloads/GFX/Kadith's free icons/PNGs/RetroKeyboardWhite/Individuals/SRetroWhite.png" type="Texture" id=12]
[ext_resource path="res://Downloads/GFX/Kadith's free icons/PNGs/RetroKeyboardWhite/Individuals/ARetroWhite.png" type="Texture" id=13]
[ext_resource path="res://UI/TutorialUI.gd" type="Script" id=14]
[ext_resource path="res://PixelArt/UI/green_check_ui.png" type="Texture" id=15]
[ext_resource path="res://PixelArt/UI/save_icon.png" type="Texture" id=16]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 10 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 10 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 10 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 10 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 13 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 13 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 13 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 13 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 13 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 12 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 12 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 12 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 12 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 12 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "W",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "A",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "D",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "S",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=26]
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "E",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 80, 16 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 8 )
region = Rect2( 80, 0, 80, 16 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 8 )
region = Rect2( 160, 0, 80, 16 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 8 )
region = Rect2( 0, 16, 80, 16 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 8 )
region = Rect2( 80, 16, 80, 16 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 8 )
region = Rect2( 160, 16, 80, 16 )

[sub_resource type="SpriteFrames" id=40]
animations = [ {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "SPACE",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 27, 16 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 9 )
region = Rect2( 27, 0, 27, 16 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 9 )
region = Rect2( 54, 0, 27, 16 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 9 )
region = Rect2( 81, 0, 27, 16 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 9 )
region = Rect2( 0, 16, 27, 16 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 9 )
region = Rect2( 27, 16, 27, 16 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=53]
animations = [ {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "TAB",
"speed": 5.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": true,
"name": "ESC",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=57]
animations = [ {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "LC",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=58]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 5 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=62]
animations = [ {
"frames": [ SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": true,
"name": "RC",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 6 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 11 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 11 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=69]
animations = [ {
"frames": [ SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "DOWN",
"speed": 5.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": true,
"name": "UP",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=70]
font_data = ExtResource( 1 )

[node name="TutorialUI" type="Control"]
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="W" type="AnimatedSprite" parent="Move"]
position = Vector2( 24, -24 )
frames = SubResource( 25 )
animation = "W"
frame = 4
playing = true

[node name="A" type="AnimatedSprite" parent="Move"]
position = Vector2( 8, -8 )
frames = SubResource( 25 )
animation = "A"
frame = 1
playing = true

[node name="S" type="AnimatedSprite" parent="Move"]
position = Vector2( 24, -8 )
frames = SubResource( 25 )
animation = "S"
frame = 5
playing = true

[node name="D" type="AnimatedSprite" parent="Move"]
position = Vector2( 40, -8 )
frames = SubResource( 25 )
animation = "D"
frame = 2
playing = true

[node name="Label" type="Label" parent="Move"]
margin_left = 4.0
margin_right = 44.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 26 )
text = "MOVE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interact" type="Control" parent="."]
margin_left = 64.0
margin_right = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E" type="AnimatedSprite" parent="Interact"]
position = Vector2( 32, -11 )
frames = SubResource( 33 )
animation = "E"
playing = true

[node name="Label" type="Label" parent="Interact"]
margin_right = 72.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 26 )
text = "INTERACT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dodge" type="Control" parent="."]
margin_left = 160.0
margin_right = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SPACE" type="AnimatedSprite" parent="Dodge"]
position = Vector2( 31, -11 )
frames = SubResource( 40 )
animation = "SPACE"
frame = 3
playing = true

[node name="Label" type="Label" parent="Dodge"]
margin_right = 64.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 26 )
text = "DODGE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="."]
margin_left = 256.0
margin_right = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TAB" type="AnimatedSprite" parent="Menu"]
position = Vector2( 23, -11 )
frames = SubResource( 53 )
animation = "TAB"
frame = 2
playing = true

[node name="ESC" type="AnimatedSprite" parent="Menu"]
position = Vector2( 48, -11 )
frames = SubResource( 53 )
animation = "ESC"
frame = 4
playing = true

[node name="Label" type="Label" parent="Menu"]
margin_left = 8.0
margin_right = 56.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 26 )
text = "MENU"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrimaryAttack" type="Control" parent="."]
margin_left = 328.0
margin_right = 328.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftClick" type="AnimatedSprite" parent="PrimaryAttack"]
position = Vector2( 32, -14 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 57 )
animation = "LC"
frame = 2
playing = true

[node name="Label" type="Label" parent="PrimaryAttack"]
margin_left = 8.0
margin_right = 56.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 58 )
text = "PRIMARY
ATTACK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecondaryAttack" type="Control" parent="."]
margin_left = 392.0
margin_right = 392.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightClick" type="AnimatedSprite" parent="SecondaryAttack"]
position = Vector2( 32, -14 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 62 )
animation = "RC"
frame = 2
playing = true

[node name="Label" type="Label" parent="SecondaryAttack"]
margin_left = 4.0
margin_right = 60.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 58 )
text = "SECONDARY
ATTACK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotbar" type="Control" parent="."]
margin_left = 465.0
margin_right = 465.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollUP" type="AnimatedSprite" parent="Hotbar"]
position = Vector2( 14, -14 )
frames = SubResource( 69 )
animation = "UP"
frame = 2
playing = true

[node name="ScrollDOWN" type="AnimatedSprite" parent="Hotbar"]
position = Vector2( 38, -14 )
frames = SubResource( 69 )
animation = "DOWN"
frame = 1
playing = true

[node name="Label" type="Label" parent="Hotbar"]
margin_right = 56.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 70 )
text = "HOTBAR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveGame" type="Control" parent="."]
margin_left = 537.0
margin_right = 537.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Sprite" parent="SaveGame"]
position = Vector2( 28, -14 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 16 )

[node name="Label" type="Label" parent="SaveGame"]
margin_right = 54.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 70 )
text = "SAVE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Completed" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Completed"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 15 )
expand = true
